--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <title>CS4241 Assignment 3</title>
-    <meta charset="utf-8">
-    <script src="js/main.js"></script>
-    <link rel="stylesheet" href="css/main.css">
+    <meta charset="utf-8" name="description" content="CS4241 Assignment 3, a two-tier simple web application">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="../js/main.js"></script>
+    <link rel="stylesheet" href="../css/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
     <!-- fonts from google fonts-->
@@ -17,8 +18,12 @@
   </head>
   <body class="bg-secondary text-light">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-  <div align="center">
-      <h1>Game Wishlist</h1>
+  <%if (loggedIn) {%>
+  <div>
+      <div class="flex-row">
+          <h1>Game Wishlist</h1>
+          <button id="logoutbtn" class="btn btn-outline-light right-corner">Log Out</button>
+      </div>
       <div class="flex-row">
           <table id="wishlist" class="table table-secondary table-hover">
             <tr>
@@ -42,11 +47,28 @@
               <input type="text" id="gamename" placeholder="Game Name">
               <input type="text" id="gamereview" placeholder="Game Review">
               <input type="number" id="gameprice" placeholder="Game Price">
-              <button class="btn btn-outline-light">Add Game</button>
+              <button id="submitbtn" class="btn btn-outline-light">Add Game</button>
             </div>
           </form>
         </div>
       </div>
     </div>
+  <%} else {%>
+      <form>
+          <div id="login-form" class="flex-col">
+              <h1>Login</h1>
+              <div class="mb-3">
+                  <label for="username" class="form-label text-white">Username</label>
+                  <input type="text" id="username" class="form-control" placeholder="Enter your username">
+              </div>
+              <div class="mb-3">
+                  <label for="password" class="form-label text-white">Password</label>
+                  <input type="text" id="password" class="form-control" placeholder="Enter your password">
+              </div>
+              <button id="loginbtn" class="btn btn-light">Login</button>
+              <div id="errMsg"></div>
+          </div>
+      </form>
+  <%}%>
   </body>
 </html>
