--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -16,7 +16,7 @@
     <!-- get rid of favicon error -->
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
   </head>
-  <body class="bg-secondary text-light">
+  <body class="bg-dark text-light">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
   <%if (loggedIn) {%>
   <div>
@@ -44,9 +44,18 @@
           <form>
             <div class="flex-col">
               <h2>Modify List</h2>
-              <input type="text" id="gamename" placeholder="Game Name">
-              <input type="text" id="gamereview" placeholder="Game Review">
-              <input type="number" id="gameprice" placeholder="Game Price">
+                <div class="mb-3">
+                    <label for="gamename" class="form-label text-white">Game Name</label>
+                    <input type="text" id="gamename" class="form-control" placeholder="Enter a Game Name">
+                </div>
+                <div class="mb-3">
+                    <label for="gamereview" class="form-label text-white">Review</label>
+                    <input type="text" id="gamereview" class="form-control" placeholder="Enter the Game's Review">
+                </div>
+                <div class="mb-3">
+                    <label for="gameprice" class="form-label text-white">Price</label>
+                    <input type="number" id="gameprice" class="form-control" placeholder="Enter the Game's Price">
+                </div>
               <button id="submitbtn" class="btn btn-outline-light">Add Game</button>
             </div>
           </form>
@@ -65,8 +74,34 @@
                   <label for="password" class="form-label text-white">Password</label>
                   <input type="text" id="password" class="form-control" placeholder="Enter your password">
               </div>
-              <button id="loginbtn" class="btn btn-light">Login</button>
+              <button id="loginbtn" class="btn btn-primary">Login</button>
               <div id="errMsg"></div>
+              <div id="dropdown" class="flex-row">
+                  <p>New here?
+                      <a id="createlink" class="link-info link-opacity-100-hover" data-bs-toggle="collapse" href="#createAccount">
+                          Create an account
+                      </a>
+                  </p>
+              </div>
+              <div class="collapse" id="createAccount">
+                  <h1>Create an Account</h1>
+                  <div class="mb-3">
+                      <label for="create-username" class="form-label text-white">Username</label>
+                      <input type="text" id="create-username" class="form-control" placeholder="Enter a username">
+                  </div>
+                  <div class="mb-3">
+                      <label for="create-password" class="form-label text-white">Password</label>
+                      <input type="text" id="create-password" class="form-control" placeholder="Enter a password">
+                  </div>
+                  <div class="mb-3">
+                      <label for="create-confirm-password" class="form-label text-white">Confirm Password</label>
+                      <input type="text" id="create-confirm-password" class="form-control" placeholder="password">
+                  </div>
+                  <div class="flex-col">
+                      <button id="createbtn" class="btn btn-primary">Create Account</button>
+                      <div id="create-errMsg"></div>
+                  </div>
+              </div>
           </div>
       </form>
   <%}%>
